--- a/src/Pages/Services/Services.css
+++ b/src/Pages/Services/Services.css
@@ -3,3 +3,9 @@
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 20px;
 }
+
+@media screen and (max-width: 600px){
+   .services-container{
+      grid-template-columns: repeat(1 , 1fr);
+   }
+}
